# jsaudpoc

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_REPORT.md  Cargo.toml  LEARNINGS.md  LOCAL_WHISPER_INTEGRATION.md  README-RUST.md  WAKE_WORD_README.md  WAKE_WORD_REPORT.md  WAKE_WORD_SUMMARY.md  WAKE_WORD_USAGE.md  build-cross.sh  client-whisper.html  example_acknowledgement_sounds.rs  index.html  package-lock.json  package.json  playwright-record-test.js  server.js  test.js
examples/: train_wake_word.rs  wake_word_demo.rs  wake_word_integration.rs  wake_word_tui.rs
src/: main.rs  wake_word.rs
