[package]
name = "audio-transcribe-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "audio_transcribe_cli"
path = "src/main.rs"

[[bin]]
name = "audio-transcribe-cli"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
hound = "3.5"
rustfft = "6.2"
ndarray = "0.15"
